refactor: 바우처 DTO 요청, 응답 분리, 바우처 조회 포맷 변경