@@ -4,11 +4,14 @@ import com.programmers.vouchermanagement.voucher.domain.DiscountPolicy;
 import com.programmers.vouchermanagement.voucher.domain.DiscountType;
 import com.programmers.vouchermanagement.voucher.domain.Voucher;
 import com.programmers.vouchermanagement.voucher.domain.VoucherRepository;
+import com.programmers.vouchermanagement.voucher.dto.request.VoucherCreationRequest;
+import com.programmers.vouchermanagement.voucher.dto.response.VoucherResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -17,19 +20,18 @@ public class VoucherService {
 
     private final VoucherRepository voucherRepository;
 
-    public Voucher createVoucher(VoucherDto request) {
-        DiscountType discountType = request.discountType();
+    public Voucher createVoucher(VoucherCreationRequest request) {
+        DiscountType discountType = request.type();
         int amount = request.amount();
         DiscountPolicy discountPolicy = discountType.createDiscountPolicy(amount);
         Voucher voucher = new Voucher(discountPolicy);
-        log.info("Create Voucher! DiscountType: {}, DiscountAmount: {}", voucher.getClass().getSimpleName(), request.amount());
         return voucherRepository.save(voucher);
     }
 
-    public List<VoucherDto> getVouchers() {
+    public List<VoucherResponse> getVouchers() {
         List<Voucher> vouchers = voucherRepository.findAll();
         return vouchers.stream()
-                .map(VoucherDto::toDto)
-                .toList();
+                .map(VoucherResponse::new)
+                .collect(Collectors.toList());
     }
 }
